<?xml version="1.0" encoding="utf-8"?>
<!--
NIM   : 10119276
Nama  : Nasthasa Wulan Ghani Sopian
Kelas : IF-7
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_back"
    tools:context=".view.InputActivity">

    <LinearLayout
        android:id="@+id/title_add_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_margin="20dp"
            android:id="@+id/back"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/txt_diary"/>

    </LinearLayout>

    <TextView
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25dp"
        android:padding="25dp"
        android:layout_margin="20dp"
        android:text="MY DIARY"/>

    <EditText
        android:id="@+id/et_judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/txt_title" />

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_kategori"
        android:hint="@string/txt_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_isi"
        android:hint="@string/txt_isi"
        android:inputType="textMultiLine|textCapSentences"
        android:minHeight="200dp"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    
    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/design_default_color_on_primary"
        android:text="@string/txt_simpan"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="delete"
        android:layout_gravity="bottom|end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>